--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,18 +7,18 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-#  - name: Posts
-#    url: '#posts'
-#    weight: 20
+  - name: Event
+    url: '#event'
+    weight: 20
 #  - name: Talks
 #    url: '#talks'
 #    weight: 40
   - name: Publications
     url: '#publication'
-    weight: 20
+    weight: 30
   - name: Research
     url: '#research'
-    weight: 30
+    weight: 40
   #  - name: Contact
 #    url: '#contact'
 #    weight: 60
@@ -27,8 +27,8 @@ main:
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
   - name: CV
     url: uploads/resume.pdf
-    weight: 40
+    weight: 50
   - name: Research Statement
     url: uploads/research_statement.pdf
-    weight: 50
+    weight: 60
 
