--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
     url: '#about'
     weight: 10
   - name: Event
-    url: '#event'
+    url: '#news'
     weight: 20
 #  - name: Talks
 #    url: '#talks'
